# kfabric

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: demo-scenarios.md  session-handoff.md  v1-runbook.md
kfabric/: __init__.py  config.py  main.py
kfabric/api/: app.py  deps.py  serializers.py
kfabric/api/routes/: __init__.py  auth.py  mcp.py  queries.py  system.py
kfabric/domain/: enums.py  schemas.py
kfabric/infra/: db.py  models.py  observability.py  runtime_checks.py
kfabric/mcp/: registry.py  server.py
kfabric/services/: audit_trail.py  auth_service.py  content_payloads.py  corpus_builder.py  corpus_export.py  deduplication.py  discovery_engine.py  document_collector.py  document_parser.py  document_scoring.py  fragment_salvage.py  fragment_synthesis.py  marginal_contribution.py  orchestrator.py  query_expansion.py  rag_prep.py  source_connectors.py
kfabric/web/: paths.py  router.py
kfabric/web/static/: style.css
kfabric/web/templates/: auth.html  base.html  dashboard.html  index.html  ops.html
kfabric/workers/: celery_app.py  tasks.py
migrations/: env.py
migrations/versions/: 20260318_0001_initial_schema.py  20260319_0002_multi_user_auth.py
scripts/: generate_demo_scenarios.py
tests/: conftest.py  test_api_flow.py  test_auth_multi_user.py  test_celery_app.py  test_connectors.py  test_main.py  test_mcp_contracts.py  test_scoring.py  test_security.py  test_web_paths.py
